# qml-formatter

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: update-major-version.yml
qml_formatter_hook/: main.py
